kimterpreting/static/styles.css
@import url('https://fonts.googleapis.com/css2?family=Playball&display=swap');


@import url('https://fonts.googleapis.com/css2?family=Cormorant&family=Lato&display=swap');
/*
font-family: 'Lato', sans-serif;
font-family: 'Cormorant', serif;
*/

* {
  box-sizing: border-box;
  font-family: Lato, sans-serif;
  padding: 0;
  margin: 0;
}

html {
  scroll-behavior: smooth;
}

a {
  color: indigo;
  text-decoration: none;
}

#logo {
  color: white;
}

.top {
  z-index: 101;
  background-color: white;
  position: relative;
}

.header {
  position: fixed;
  background-color: rgba(0,0,0,.3);
  color: white;
  display: inline-flex;
  height: 12vh;
  max-height: 100px;
  width: 100%;
  padding: 40px 5vw;
  z-index: 100;
}

.secondary-header {
  top: -100px;
  z-index: 1000;
  animation-name: slideIn;
  animation-duration: 1s;
  animation-timing-function: ease-out;
  animation-fill-mode: forwards;
}

@keyframes slideIn {
  100% {
    transform: translateY(100px);
  }
}

.header-logo {
  font-family: 'Playball', cursive;
  font-size: 3em;
  font-weight: normal;
  position: absolute;
  margin: 0;
  top: 50%;
  transform: translateY(-50%);
}

.header-links-container {
  right: 5vw;
  color: white;
  position: absolute;
  height: 100%;
  display: flex;
  align-items: center;
  margin: 0;
  top: 50%;
  transform: translateY(-50%);
}

.header-links {
  display: none;
  color: white;
}

.header-links li {
  font-size: 1.2em;
  padding: 0 10px;
}

.header-links a {
  color: white;
}

.header-links li:hover {
  font-weight: bold;
  background-color: rgba(0,0,0,.3);
}

.header-links .first-item {
  border: 0;
}

.mobile-navigation {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background-color: rgba(0,0,0,.95);
  opacity: 0;
  visibility: hidden;
  transition: visibility .5s, opacity .5s ease-in;
  z-index: 1000;
}

.mobile-links {
  color: white;
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  padding: 0 20vw;
}

.mobile-navigation li {
  color: white;
  list-style: none;
  text-align: center;
  padding: 10px 0;
  font-size: 1.2em;
  line-height: 1.5em;
}

.mobile-navigation a {
  color: white;
}

.mobile-navigation .first-item {
  border: 0;
}

.header-menu {
  width: calc(1.5em + 2vw);
  transition: visibility .5s, opacity .5s ease-in;
}

.menu-close {
  width: calc(1.5em + 2vw);
  float: right;
  margin: 5vw;
}

.nav-link {
  text-decoration: none;
}

.fill-screen {
  min-height: 100vh;
}

.card {
  position: relative;
  padding: 10px;
  background-color: white;
  border-radius: 3px;
  box-shadow: 0 2px 8px 0 rgba(0,0,0,0.2);
  margin: 10px;
  width: 100%;
}

.title-page {
  background: url(./images/background.jpg) no-repeat center right fixed;
  background-color: rgba(75,0,130,.95);
  background-blend-mode: multiply;
}

.title-content {
  color: white;
  padding: 0 5vw;
  position: fixed;
  top: 50%;
  transform: translateY(-50%);
  text-align: center;
  width: 100vw;
}

.title-content h1 {
  font-size: calc(1.2em + 2vw + 2vh);
}

.title-content h2 {
  font-family: 'Cormorant', serif;
  font-weight: normal;
  font-size: calc(1em + .2vw + .2vh);
}

.button-container {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.button {
  display: flex;
  align-items: center;
  background-color: transparent;
  margin: 5px 5px;
  font-size: calc(1em + .5vw);
  padding: 5px 10px;
  color: white;
  border: 2px solid white;
  border-radius: 20px/50%;
  box-shadow: 1px 1px 1px rgba(0,0,0,.3);
  text-decoration: none;
}

.smaller-button {
  font-size: initial;
}

.button.purple {
  color: indigo;
  border: 2px solid indigo;
}

.button.purple:hover {
  color: white;
  background-color: indigo;
}

.background-highlight {
  background-color: indigo;
}

.outline-highlight {
  border-color: indigo;
}

.orange {
  background-color: orange;
  border-color: orange;
  color: black;
}

.container {
  position: relative;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5vh 5vw;
}

.pp {
  width: 30vw;
  height: 30vw;
  max-width: 150px;
  max-height: 150px;
  border-radius: 50%;
  margin-bottom: 5vh;
}

.about-description {
  font-size: 1em;
  text-align: justify;
  color: rgb(50,50,50);
  border-top: 1px solid rgb(50,50,50);
  border-bottom: 1px solid grey;
  padding: 2vh 2vw;
}

.logos {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.logo-container {
  padding: 2.5vh 5vw;
}

.logo {
  max-height: 60px;
  max-width: 90vw;
  display: block;
  margin: 0 auto 2vh auto;
}

.logo-container p {
  font-size: 1em;
  color: indigo;
  text-align: center;
  font-weight: bold;
}

footer {
  position: absolute;
  background-color: black;
  width: 100%;
  height: 20vh;
  display: flex;
  flex-direction: row;
  justify-items: center;
  align-items: center;
  z-index: 102;
}

footer p {
  font-size: 0.8em;
  color: white;
  width: 100%;
  text-align: center;
}

.fade-in {
  opacity: 0;
  visibility: hidden;
  transform: translateY(20vh);
  transition: opacity 1s linear, visibility 1s linear, transform .5s ease-out;
}

.internal-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2vh 2vw;
  overflow: hidden;
}

.internal-container h3, .internal-container h4 {
  text-align: center;
  padding: 5px 0;
}

.service h4 {
  text-align: left;
  color: indigo;
}

.internal-container h4 {
  color: indigo;
}

.rates-content {
  width: 40vw;
  max-width: 200px;
}

.center {
  text-align: center;
}

.border {
  background-color: rgb(50,50,50);
  width: 100%;
  height: 1px;
}

.mb {
  margin-bottom: 2vh;
}

.services-container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  width: 100%;
}

.service {
  display: block;
  margin: 10px auto;
  width: 95%;
  max-width: 500px;
}

.service-image {
  display: block;
  margin: auto;
  max-width: 100%;
  border-radius: 3px;
}

.service h4 {
  padding: 5px 0;
}

.heading-page {
  background-color: indigo;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
}

.heading {
  color: white;
  margin: 5vw;
}

.title-page .down {
  position: fixed;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
}

.down {
  display: block;
  margin: 10px auto;
  background-color: rgba(0,0,0,.3);
  border-radius: 50%;
}

.terms-container {
  position: relative;
  display: block;
  padding: 5vh 5vw;
}

.contact label {
  margin: 5px 0;
  color: indigo;
  font-weight: bold;
}

.contact input {
  margin: 5px 0;
}

.contact p {
  margin: 5px 0;
}

.contact .input-field {
  width: 95%;
  max-width: 300px;
  padding: 5px;
}

.contact ul {
  list-style-type: none;
  text-align: center;
}

.contact li label{
  color: black;
  font-weight: normal;
}

.alert {
  padding: 5px;
  text-align: center;
  border-radius: 3px;
}

.alert-success {
  background-color: palegreen;
  color: seagreen;
}

.alert-failure {
  background-color: tomato;
  color: darkred;
}

.alert-info {
  background-color: lightskyblue;
  color: navy;
}

@media only screen and (min-width: 420px) {
  .button-container {
    display: inline-flex;
    margin: auto;
    flex-direction: row;
  }
  .internal-container {
    flex-direction: row;
  }
  .border {
    height: 80px;
    width: 1px;
  }
}

@media only screen and (min-width: 800px) {
  .title-page {
    background: url(./images/background.jpg) no-repeat center center fixed;
    background-color: rgba(75,0,130,.95);
    background-blend-mode: multiply;
  }
  .title-content {
    text-align: left;
  }

  .title-content h2 {
    margin: 0 .45vw;
  }

  .button:hover {
    background-color: white;
    border-color: white;
    color: indigo;
    cursor: pointer;
  }
  .button.orange:hover {
    border-color: indigo;
  }
  .button.purple:hover {
    border-color: indigo;
  }
  .logos {
    display: inline-flex;
    flex-direction: row;
    padding: 0;
    margin: auto;
    width: 100%;
  }
  .logo-container {
    width: 33.3%;
  }
  .logo {
    max-width: 100%;
  }
  .about-description {
    font-size: 1em;
  }
  .logo-container p {
    font-size: 1em;
  }
}

@media only screen and (min-width: 920px) {

  .header-menu {
    display: none;
  }

  .header-links {
    display: flex;
    list-style: none;
    height: 100%;
  }

  .nav-link {
    display: flex;
    align-items: center;
    height: 100%;
  }

}

